2005-02-11 Scott Dattalo <scott@dattalo.com>
	* src/os_dependent.cc: Libraries stored in system directories were
	getting ignored.

2005-02-09 Scott Dattalo <scott@dattalo.com>
	* src/Makefile.am: Newly added src file 'os_dependent.cc' was not
	part of the Makefile
	* cli/input.cc, src/os_dependent.cc: abstracted some os dependent
	changes that were recently added
	
2005-02-01 Scott Dattalo <scott@dattalo.com>
	* src/processor.h, src/processor.cc, src/trace.cc: Added 'Debug()'
	method to processor class and call it whenever a register
	assertion occur.s

2005-01-30 Borut Razem <borut.razem@siol.net>
	* config_win32.h.in, configure_win32.awk: extract version, package and
	  bugreport values from configure.ac

2005-01-26 Scott Dattalo <scott@dattalo.com>
	* configure.ac: repositioned the call to the m4 macro wi_READLINE_LIB
	so that it would run properly.

2005-01-26 Scott Dattalo <scott@dattalo.com>
	* plat/win32/gpsim.def: added more external cross references.
	* module/modules.vcproj: changed from pthreadVC1.lib to
	pthreadVC.lib.

2005-01-23 Scott Dattalo <scott@dattalo.com>
	* configure.ac: Craig Franklin updated gpsim's configure files. It
	turns out there was a tiny bug preventing things to build a
	*second* time (the first time would work fine)
	* src/gpsim_time.h, src/gpsim_time.cc, src/init.cc: The newly
	added and globally instantiated StopWatch class' constructor was
	making calls to the globally instantiated (but not necessarily
	constructed) Symbol_Table class. Now, StopWatch::init() will make
	the calls to the symbol table.

2005-01-21 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def, src/src.vcproj: MSVC sync
	* doc/gpsimWin32.html: gpsim works with flex 2.4.31

2005-01-20 Scott Dattalo <scott@dattalo.com>
	* src/breakpoints.cc: Trigger actions were not printing
	execution breakpoint messages.
	* src/registers.h, src/registers.cc: Added a skip_start function to
	the program counter.

2005-01-19 Scott Dattalo <scott@dattalo.com>