@@ -274,7 +274,7 @@ public:
   virtual char * toBitStr(char *s, int len); 
   virtual string &baseName()
   {
-    return name_str; 
+    return name_str;
   }
 };
 
